Add palette tests to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ before_install:
 script:
   - go test -coverprofile=css.coverprofile ./css
   - go test -coverprofile=page.coverprofile ./page
+  - go test -coverprofile=palette.coverprofile ./palette
   - $HOME/gopath/bin/gover
   - $HOME/gopath/bin/goveralls -coverprofile=gover.coverprofile -service travis-ci
